# knowdisk

./: .gitignore  .prettierignore  .prettierrc.json  README.md  README.zh-CN.md  components.json  electrobun.config.test.ts  electrobun.config.ts  eslint.config.mjs  package-scripts.test.ts  package.json  tailwind.config.js  tsconfig.json  tsconfig.typecheck.json  vite.config.ts
python/: pyproject.toml
python/tests/: test_bootstrap_fetch.py  test_bun_client.py  test_dataset_indexing_integration.py  test_image_runtime.py  test_index_queue.py  test_index_service.py  test_integration_indexing.py  test_model_artifact_manager.py  test_model_artifacts.py  test_model_download.py  test_model_runtime_integration.py  test_model_runtime_loader.py  test_model_service.py  test_model_types.py  test_parser_docling.py  test_parser_image_pipeline.py  test_parser_service.py  test_parser_simple.py  test_parser_types.py  test_protocol.py  test_runtime_types.py  test_server.py  test_server_model_start.py  test_smoke.py  test_status.py  test_vector_repository.py  test_zvec_backend.py
python/tests/data/: hello.md  info.json
python/worker/: __init__.py  __main__.py  bun_client.py  index_queue.py  index_service.py  model_artifact_manager.py  model_artifacts.py  model_download.py  model_runtime_loader.py  model_service.py  parser_docling.py  parser_service.py  parser_simple.py  protocol.py  server.py  status.py  vector_repository.py
python/worker/index/: __init__.py  chunk_store.py  queue.py  queue_store.py  search_service.py  service.py
python/worker/model/: __init__.py  artifact_manager.py  artifacts.py  download.py  image_runtime.py  model_artifacts.json  model_specs.py  ocr_presets.json  runtime_loader.py  service.py  types.py
python/worker/parser/: __init__.py  docling_adapter.py  image_pipeline.py  markdown_chunker.py  service.py  simple.py  types.py
(+323 files in other folders)
